New look and feel constraint layout for detail activity able to see trailers and reviews in detail activity